syntax = "proto3";

package helperPlugin;
option go_package = "../../pkg/helperPlugin";

message Empty {}

message ConfigsRequest {
    map<string,string> configs = 1;
}

service SpiffeHelper {
    rpc PostConfigs(ConfigsRequest) returns (Empty) {};
}
